Version 0.1.2  - Hide iDIN 18+ attribute when common active setting is set to "No"  - Updated API manifests for merchant data  - Added iDIN transaction tabs to customer and order details in Administration  - Fix bug when the iDIN information block on the my account was shown twice  - Added setting to require 18+ verification for every checkout, even for returning customers  - Separated Registration/Connect and 18+ verification when both we're enabled  - Miscellaneous bugfixes
