# lib/CMGroep/Idin/src/Models/MerchantResponseServices.php
@@ -1,0 +1,341 @@
+<?php
+/**
+ * MerchantResponseServices
+ *
+ * PHP version 5
+ *
+ * @category Class
+ * @package  CMGroep\Idin
+ * @author   http://github.com/swagger-api/swagger-codegen
+ * @license  http://www.apache.org/licenses/LICENSE-2.0 Apache Licene v2
+ * @link     https://github.com/swagger-api/swagger-codegen
+ */
+
+/**
+ * iDIN API
+ *
+ * CMGroep iDIN API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+/**
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+
+namespace CMGroep\Idin\Models;
+
+use \ArrayAccess;
+
+/**
+ * MerchantResponseServices Class Doc Comment
+ *
+ * @category    Class */
+/** 
+ * @package     CMGroep\Idin
+ * @author      http://github.com/swagger-api/swagger-codegen
+ * @license     http://www.apache.org/licenses/LICENSE-2.0 Apache Licene v2
+ * @link        https://github.com/swagger-api/swagger-codegen
+ */
+class MerchantResponseServices implements ArrayAccess
+{
+    /**
+      * The original name of the model.
+      * @var string
+      */
+    protected static $swaggerModelName = 'MerchantResponseServices';
+
+    /**
+      * Array of property to type mappings. Used for (de)serialization
+      * @var string[]
+      */
+    protected static $swaggerTypes = array(
+        'identity' => 'bool',
+        'name' => 'bool',
+        'address' => 'bool',
+        'date_of_birth' => 'bool',
+        '_18y_or_older' => 'bool'
+    );
+
+    public static function swaggerTypes()
+    {
+        return self::$swaggerTypes;
+    }
+
+    /**
+     * Array of attributes where the key is the local name, and the value is the original name
+     * @var string[]
+     */
+    protected static $attributeMap = array(
+        'identity' => 'identity',
+        'name' => 'name',
+        'address' => 'address',
+        'date_of_birth' => 'date_of_birth',
+        '_18y_or_older' => '18y_or_older'
+    );
+
+    public static function attributeMap()
+    {
+        return self::$attributeMap;
+    }
+
+    /**
+     * Array of attributes to setter functions (for deserialization of responses)
+     * @var string[]
+     */
+    protected static $setters = array(
+        'identity' => 'setIdentity',
+        'name' => 'setName',
+        'address' => 'setAddress',
+        'date_of_birth' => 'setDateOfBirth',
+        '_18y_or_older' => 'set18yOrOlder'
+    );
+
+    public static function setters()
+    {
+        return self::$setters;
+    }
+
+    /**
+     * Array of attributes to getter functions (for serialization of requests)
+     * @var string[]
+     */
+    protected static $getters = array(
+        'identity' => 'getIdentity',
+        'name' => 'getName',
+        'address' => 'getAddress',
+        'date_of_birth' => 'getDateOfBirth',
+        '_18y_or_older' => 'get18yOrOlder'
+    );
+
+    public static function getters()
+    {
+        return self::$getters;
+    }
+
+    
+
+    
+
+    /**
+     * Associative array for storing property values
+     * @var mixed[]
+     */
+    protected $container = array();
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property value initalizing the model
+     */
+    public function __construct(array $data = null)
+    {
+        $this->container['identity'] = isset($data['identity']) ? $data['identity'] : null;
+        $this->container['name'] = isset($data['name']) ? $data['name'] : null;
+        $this->container['address'] = isset($data['address']) ? $data['address'] : null;
+        $this->container['date_of_birth'] = isset($data['date_of_birth']) ? $data['date_of_birth'] : null;
+        $this->container['_18y_or_older'] = isset($data['_18y_or_older']) ? $data['_18y_or_older'] : null;
+    }
+
+    /**
+     * show all the invalid properties with reasons.
+     *
+     * @return array invalid properties with reasons
+     */
+    public function listInvalidProperties()
+    {
+        $invalid_properties = array();
+        return $invalid_properties;
+    }
+
+    /**
+     * validate all the properties in the model
+     * return true if all passed
+     *
+     * @return bool True if all properteis are valid
+     */
+    public function valid()
+    {
+        return true;
+    }
+
+
+    /**
+     * Gets identity
+     * @return bool
+     */
+    public function getIdentity()
+    {
+        return $this->container['identity'];
+    }
+
+    /**
+     * Sets identity
+     * @param bool $identity Determines if Identity service enabled
+     * @return $this
+     */
+    public function setIdentity($identity)
+    {
+        $this->container['identity'] = $identity;
+
+        return $this;
+    }
+
+    /**
+     * Gets name
+     * @return bool
+     */
+    public function getName()
+    {
+        return $this->container['name'];
+    }
+
+    /**
+     * Sets name
+     * @param bool $name Determines if Name service enabled
+     * @return $this
+     */
+    public function setName($name)
+    {
+        $this->container['name'] = $name;
+
+        return $this;
+    }
+
+    /**
+     * Gets address
+     * @return bool
+     */
+    public function getAddress()
+    {
+        return $this->container['address'];
+    }
+
+    /**
+     * Sets address
+     * @param bool $address Determines if Address service enabled
+     * @return $this
+     */
+    public function setAddress($address)
+    {
+        $this->container['address'] = $address;
+
+        return $this;
+    }
+
+    /**
+     * Gets date_of_birth
+     * @return bool
+     */
+    public function getDateOfBirth()
+    {
+        return $this->container['date_of_birth'];
+    }
+
+    /**
+     * Sets date_of_birth
+     * @param bool $date_of_birth Determines if Date of Birth service enabled
+     * @return $this
+     */
+    public function setDateOfBirth($date_of_birth)
+    {
+        $this->container['date_of_birth'] = $date_of_birth;
+
+        return $this;
+    }
+
+    /**
+     * Gets _18y_or_older
+     * @return bool
+     */
+    public function get18yOrOlder()
+    {
+        return $this->container['_18y_or_older'];
+    }
+
+    /**
+     * Sets _18y_or_older
+     * @param bool $_18y_or_older Determines if 18+ service enabled
+     * @return $this
+     */
+    public function set18yOrOlder($_18y_or_older)
+    {
+        $this->container['_18y_or_older'] = $_18y_or_older;
+
+        return $this;
+    }
+    /**
+     * Returns true if offset exists. False otherwise.
+     * @param  integer $offset Offset
+     * @return boolean
+     */
+    public function offsetExists($offset)
+    {
+        return isset($this->container[$offset]);
+    }
+
+    /**
+     * Gets offset.
+     * @param  integer $offset Offset
+     * @return mixed
+     */
+    public function offsetGet($offset)
+    {
+        return isset($this->container[$offset]) ? $this->container[$offset] : null;
+    }
+
+    /**
+     * Sets value based on offset.
+     * @param  integer $offset Offset
+     * @param  mixed   $value  Value to be set
+     * @return void
+     */
+    public function offsetSet($offset, $value)
+    {
+        if (is_null($offset)) {
+            $this->container[] = $value;
+        } else {
+            $this->container[$offset] = $value;
+        }
+    }
+
+    /**
+     * Unsets offset.
+     * @param  integer $offset Offset
+     * @return void
+     */
+    public function offsetUnset($offset)
+    {
+        unset($this->container[$offset]);
+    }
+
+    /**
+     * Gets the string presentation of the object
+     * @return string
+     */
+    public function __toString()
+    {
+        if (defined('JSON_PRETTY_PRINT')) { // use JSON pretty print
+            return json_encode(\CMGroep\Idin\ObjectSerializer::sanitizeForSerialization($this), JSON_PRETTY_PRINT);
+        }
+
+        return json_encode(\CMGroep\Idin\ObjectSerializer::sanitizeForSerialization($this));
+    }
+}
+
+
